fixed nav layout issue

--- a/style_guide_project_files/css/styles.css
+++ b/style_guide_project_files/css/styles.css
@@ -434,6 +434,11 @@ p {
   }
 }
 
+.grid__col--3 {
+  display: flex;
+  justify-content: center;
+}
+
 .grid__col--3.theme__colors {
   width: 100%;
   padding: 0.75em 0 0.75em 0.75em;
@@ -445,16 +450,12 @@ p {
   font-family: "Open Sans", sans-serif;
   font-weight: 700;
   background-color: #deb1ee;
+  display: block;
 }
 @media (min-width: 769px) {
   .grid__col--3.theme__colors {
     text-align: center;
   }
-}
-
-.grid__col--3 {
-  display: flex;
-  justify-content: center;
 }
 
 .grid__col--4.theme__colors {
@@ -492,10 +493,6 @@ p {
     text-align: center;
   }
 }
-.grid__col--5.theme__colors .grid__col--6 {
-  display: flex;
-  justify-content: center;
-}
 
 .grid__col--6.theme__colors {
   width: 100%;
@@ -508,7 +505,7 @@ p {
   font-family: "Open Sans", sans-serif;
   font-weight: 700;
   background-color: #4aacca;
-  text-align: center;
+  display: block;
 }
 @media (min-width: 769px) {
   .grid__col--6.theme__colors {
@@ -800,6 +797,11 @@ p {
 .form {
   text-align: center;
 }
+@media (min-width: 769px) {
+  .form {
+    margin-left: 1em;
+  }
+}
 
 .form + button {
   margin-right: 100px;
@@ -827,7 +829,11 @@ p {
 .img--frame {
   border: 0.1px solid #c9c9c9;
   padding: 0.9em;
-  width: 100%;
+}
+@media (min-width: 769px) {
+  .img--frame {
+    margin-left: 2em;
+  }
 }
 
 .nav {
