--- a/style_guide_project_files/scss/components/_forms.scss
+++ b/style_guide_project_files/scss/components/_forms.scss
@@ -1,6 +1,9 @@
 // form -----------
 .form {
   text-align: center;
+  @include mq(large) {
+    margin-left: 1em;
+  }
 }
 
 .form + button {
