--- a/style_guide_project_files/scss/components/_grid.scss
+++ b/style_guide_project_files/scss/components/_grid.scss
@@ -35,15 +35,14 @@
 }
 
 // grid style ---
-
-.grid__col--3.theme__colors {
-  @include grid-btn;
-  background-color: $col-3-color;
-}
-
 .grid__col--3 {
   @include flex($just: center) {
   }
+}
+.grid__col--3.theme__colors {
+  @include grid-btn;
+  background-color: $col-3-color;
+  display: block;
 }
 .grid__col--4.theme__colors {
   @include grid-btn;
@@ -52,20 +51,17 @@
 .grid__col--5.theme__colors {
   @include grid-btn;
   background-color: $col-5-color;
-
-  .grid__col--6 {
-    @include flex($just: center);
-  }
 }
 .grid__col--6.theme__colors {
   @include grid-btn;
   background-color: $col-6-color;
-  text-align: center;
-}
-.grid__col--6 {
-  @include flex($just: center);
+  display: block;
 }
 
+.grid__col--6 {
+  @include flex($just: center) {
+  }
+}
 .grid__col--7.theme__colors {
   @include grid-btn;
   background-color: $col-7-color;
