--- a/style_guide_project_files/scss/components/_images.scss
+++ b/style_guide_project_files/scss/components/_images.scss
@@ -21,5 +21,7 @@
   @extend %image-w;
   border: 0.1px solid rgb(201, 201, 201);
   padding: 0.9em;
-  width: 100%;
+  @include mq(large) {
+    margin-left: 2em;
+  }
 }
